--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
     <input type="text" id="userInput" placeholder="Your answer here" />
     <button id="submitBtn">Submit</button>
     <p id="result" class="result"></p>
+    <p id="score">Score: 0</p> <!-- Score display -->
 
     <script>
         const lyrics = [
@@ -39,6 +40,8 @@
             { incomplete: "Hey Jude, don't make it ___.", answer: "bad" },
             // Add more lyrics here
         ];
+
+        let score = 0; // Initialize score
 
         function getRandomLyric() {
             const randomLyric = lyrics[Math.floor(Math.random() * lyrics.length)];
@@ -55,11 +58,13 @@
             if (userInput === correctAnswer) {
                 resultElement.innerText = "Correct!";
                 resultElement.className = "result correct";
+                score++; // Increment score
             } else {
                 resultElement.innerText = `Wrong! The correct answer is: ${correctAnswer}`;
                 resultElement.className = "result wrong";
             }
             document.getElementById('userInput').value = ""; // Clear input
+            document.getElementById('score').innerText = `Score: ${score}`; // Update score display
 
             // Load a new lyric after a short delay
             setTimeout(getRandomLyric, 2000); // 2 seconds delay
