--- a/index.html
+++ b/index.html
@@ -35,9 +35,63 @@
 
     <script>
         const lyrics = [
+
             { incomplete: "Is this the real life? Is this just ___?", answer: "fantasy" },
             { incomplete: "We don't need no education. We don't need no ___!", answer: "thought control" },
             { incomplete: "Hey Jude, don't make it ___.", answer: "bad" },
+            { incomplete: "Is this the real life? Is this just ___?", answer: "fantasy" },
+            { incomplete: "We don't need no education. We don't need no ___!", answer: "thought control" },
+            { incomplete: "Hey Jude, don't make it ___.", answer: "bad" },
+            { incomplete: "Just a small-town girl, livin' in a ___ world.", answer: "lonely" },
+            { incomplete: "I want to hold your ___.", answer: "hand" },
+            { incomplete: "Don't stop believin', hold on to that ___.", answer: "feeling" },
+            { incomplete: "Cause this is thriller, thriller ___.", answer: "night" },
+            { incomplete: "I can't get no ___.", answer: "satisfaction" },
+            { incomplete: "Hello from the other ___.", answer: "side" },
+            { incomplete: "In the jungle, the mighty jungle, the ___ sleeps tonight.", answer: "lion" },
+            { incomplete: "With the taste of your lips, I'm on a ___.", answer: "ride" },
+            { incomplete: "It's a beautiful night, we're looking for something dumb to ___.", answer: "do" },
+            { incomplete: "I've got a feeling that tonight's gonna be a good ___.", answer: "night" },
+            { incomplete: "I will survive, oh, as long as I know how to ___.", answer: "love" },
+            { incomplete: "You are my fire, the one ___.", answer: "desire" },
+            { incomplete: "Take me home, country ___.", answer: "roads" },
+            { incomplete: "Is it too late now to say ___.", answer: "sorry" },
+            { incomplete: "I kissed a girl and I liked it, the taste of her ___.", answer: "cherry chapstick" },
+            { incomplete: "I'm walking on sunshine, whoa-oh, and don't it feel ___.", answer: "good" },
+            { incomplete: "We're up all night to get ___.", answer: "lucky" },
+            { incomplete: "Just a city boy, born and raised in ___.", answer: "South Detroit" },
+            { incomplete: "You better lose yourself in the music, the moment, you own it, you better never let it ___.", answer: "go" },
+            { incomplete: "It's a party in the ___.", answer: "USA" },
+            { incomplete: "I want it that ___.", answer: "way" },
+            { incomplete: "Somebody once told me the world was gonna ___ me.", answer: "roll me" },
+            { incomplete: "I'm in love with the shape of ___.", answer: "you" },
+            { incomplete: "Why'd you have to go and make things so ___.", answer: "complicated" },
+            { incomplete: "I got a blank space, baby, and I'll write your ___.", answer: "name" },
+            { incomplete: "Sweet Caroline, good times never ___.", answer: "seemed so good" },
+            { incomplete: "Oops!... I did it ___.", answer: "again" },
+            { incomplete: "If you liked it, then you should have put a ___ on it.", answer: "ring" },
+            { incomplete: "Every little thing that you do, I'm so in ___.", answer: "love with you" },
+            { incomplete: "And I will always ___ you.", answer: "love" },
+            { incomplete: "Shake it off, shake it off, I shake it ___.", answer: "off" },
+            { incomplete: "Let it go, let it go, can't hold it back ___.", answer: "anymore" },
+            { incomplete: "I wanna dance with somebody, I wanna feel the heat with ___.", answer: "somebody" },
+            { incomplete: "We're all just a little ___.", answer: "crazy" },
+            { incomplete: "In the end, it doesn't even ___.", answer: "matter" },
+            { incomplete: "Every breath you take, and every move you ___.", answer: "make" },
+            { incomplete: "You can dance, you can jive, having the time of your ___.", answer: "life" },
+            { incomplete: "Tonight, we are young, so let's set the world on ___.", answer: "fire" },
+            { incomplete: "Say my name, say my ___.", answer: "name" },
+            { incomplete: "Is it too late to say ___.", answer: "sorry" },
+            { incomplete: "Don't stop the music, music, music, music, music.", answer: "music" },
+            { incomplete: "I got the eye of the tiger, a fighter, dancing through the ___.", answer: "fire" },
+            { incomplete: "When I was your man, I should have bought you ___.", answer: "flowers" },
+            { incomplete: "Hit me, baby, one more ___.", answer: "time" },
+            { incomplete: "Cause you make me feel like I'm living a ___.", answer: "teenage dream" },
+            { incomplete: "I don't care, I love it, I don't care.", answer: "I love it" },
+            { incomplete: "Ain't nobody gonna turn me around, ain't nobody gonna turn me ___.", answer: "around" },
+            { incomplete: "Just a touch of love, I need a ___.", answer: "touch" },
+            { incomplete: "Don't go breaking my ___.", answer: "heart" },
+            { incomplete: "You're the one that I want, ooh, ooh, ooh, honey.", answer: "you" }
             // Add more lyrics here
         ];
 
